--- a/main/Video_playback/style_video.css
+++ b/main/Video_playback/style_video.css
@@ -1,199 +1,276 @@
 * {
-          margin: 0;
+    margin: 0;
 
 }
 
 body {
-          font-family: "Robot", sans-serif;
+    font-family: "Robot", sans-serif;
 }
 
 .navbar {
-          width: 100%;
-          height: 60px;
-          background-color: black;
+    width: 100%;
+    height: 60px;
+    background-color: black;
 }
 
 .navbar-container {
-          display: flex;
-          align-items: center;
-          /* padding: 0 50px; */
-          padding-left: 50px;
-          padding-right: 20px;
-          height: 100%;
-          color: white;
-          font-family: "Sen", sans-serif;
+    display: flex;
+    align-items: center;
+    /* padding: 0 50px; */
+    padding-left: 50px;
+    padding-right: 20px;
+    height: 100%;
+    color: white;
+    font-family: "Sen", sans-serif;
 }
 
 .navbar-logo {
-          width: 240px;
-          /* width: auto; */
-          height: auto;
-          padding-right: 10px;
+    width: 240px;
+    /* width: auto; */
+    height: auto;
+    padding-right: 10px;
 }
 
 .logo {
-          font-size: 25px;
-          cursor: pointer;
-          padding: 5px 10px;
-          color: rgb(0, 0, 0);
-          background: linear-gradient(90deg, rgba(16, 0, 255, 1) 0%, rgba(255, 0, 219, 1) 50%, rgba(255, 0, 0, 1) 100%);
+    font-size: 25px;
+    cursor: pointer;
+    padding: 5px 10px;
+    color: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgba(16, 0, 255, 1) 0%, rgba(255, 0, 219, 1) 50%, rgba(255, 0, 0, 1) 100%);
 }
 
 .menu-container {
-          flex: 2;
-          /* background: #00bdff; */
+    flex: 2;
+    /* background: #00bdff; */
 }
 
 .menu-list {
-          display: flex;
-          list-style: none;
-          font-weight: bold;
+    display: flex;
+    list-style: none;
+    font-weight: bold;
 }
 
 .menu-list-item {
-          margin-right: 25px;
-          cursor: pointer;
+    margin-right: 25px;
+    cursor: pointer;
 }
 
 .menu-list-item.active {
-          font-weight: bolder;
-          color: #0079ff;
+    font-weight: bolder;
+    color: #0079ff;
 }
 
 .search_user {
-          flex: 2;
-          position: relative;
-          display: flex;
-          /* align-items: center; */
-          justify-content: right;
-          /* background-color: #0079ff; */
-          height: 60%;
+    flex: 4;
+    position: relative;
+    /* display: flex; */
+    margin-bottom: 10px;
+    /* padding: 5px; */
+    /* align-items: center; */
+    justify-content: right;
+    /* background-color: #0079ff; */
+    height: 65%;
+    z-index: 10;
+    left: 25px;
+}
+
+.search {
+    margin-top: 15px;
 }
 
 .search_user i {
-          padding-top: 7px;
-          padding-left: 10px;
-          padding-right: 10px;
-          color: #ffa600;
-          /* color: white; */
-          font-size: 22.5px;
-
+    padding-top: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 5px;
+    color: #ffa600;
+    /* color: white; */
+    font-size: 22.5px;
+    /* position: relative; */
 }
 
 .search_user input {
-          padding: 3px 10px;
-          font-size: 15px;
-          border-radius: 5px;
-          border: none;
-          outline: none;
-          background: rgba(255, 255, 255, 0.859);
-          color: #000000;
-          /* margin-right: 10px;           */
+    padding: 3px 10px;
+    height: 40px;
+    width: 250px;
+    font-size: 15px;
+    border-radius: 5px;
+    font-family: "Grey Qo", cursive;
+    border: none;
+    outline: 3px;
+    background: rgba(255, 255, 255, 0.859);
+    color: #000000;
+    /* position: relative; */
+    /* margin-right: 10px;*/
+}
+
+.card {
+    display: block;
+    width: 230px;
+    height: 35px;
+    margin-bottom: 10px;
+    padding: 10px;
+    left: 45px;
+    text-decoration: none;
+    color: #000;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, box-shadow 0.2s;
+    position: relative;
+    /* Ensure card is positioned correctly */
+    z-index: 5;
+    /* Ensure card stays in front of other content */
+    display: flex;
+    background-color: #8a8a8a;
+    opacity: 0;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+    width: auto;
+    height: 40px;
+    border-radius: 5px 0 5px 0;
+}
+
+.card .cont {
+    padding: 5px;
+}
+
+.card h3 {
+    /* margin: px 0; */
+    font-size: 16px;
+}
+
+.card p {
+    /* margin: 5px 0; */
+    font-size: 13px;
+    color: #000;
+}
+
+.card p span {
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.card p i {
+    color: gold;
+    margin-left: 5px;
+    font-size: 12px;
+}
+
+.search_user input:hover .card {
+    opacity: 1;
+    width: 250px;
 }
 
 .profile-container {
-          flex: 2;
-          display: flex;
-          align-items: center;
-          justify-content: flex-end;
-          /* background: #0079ff; */
+    flex: 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    /* background: #0079ff; */
 
 }
 
 .profile-text-container {
-          margin-left: 5px;
-          margin-right: 15px;
+    margin-left: 5px;
+    margin-right: 15px;
 }
 
 .profile-picture {
-          width: 32px;
-          height: 32px;
-          border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
 }
 
 .login-btn {
-          background-color: lightgray;
-          color: black;
-          padding: 10px 15px;
-          font-size: medium;
-          font-weight: bolder;
-          border-radius: 20px;
-          display: flex;
-          cursor: pointer;
+    background-color: lightgray;
+    color: black;
+    padding: 10px 15px;
+    font-size: medium;
+    font-weight: bolder;
+    border-radius: 20px;
+    display: flex;
+    cursor: pointer;
 }
 
 .login-btn:hover {
-          background-color: grey;
-          color: #fff;
+    background-color: grey;
+    color: #fff;
 
 }
 
 .sidbar {
-          width: 50px;
-          height: 100%;
-          background-color: black;
-          position: fixed;
-          top: 0;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          padding-top: 75px;
+    width: 50px;
+    height: 100%;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 75px;
 
 }
 
 .left-menu-icon {
-          color: white;
-          font-size: 20px;
-          margin-bottom: 40px;
-          cursor: pointer;
+    color: white;
+    font-size: 20px;
+    margin-bottom: 40px;
+    cursor: pointer;
 }
 
 .left-menu-icon:hover {
-          color: #0079ff;
+    color: #0079ff;
 }
 
 .videoplayback-container {
-          background-color: #151515;
-          min-height: calc(100vh - 50px);
-          color: white;
+    background-color: #151515;
+    min-height: calc(100vh - 50px);
+    color: white;
 }
 
 .videoplayback-heading {
-          /* background-color: rgb(95, 152, 202); */
-          font-family: "Grey Qo", cursive;
-          font-weight: bold;
-          font-size: 18px;
-          align-items: center;
-          /* height: 40px; */
-          padding: 15px;
-          margin-left: 70px;
-          margin-right: 10px;
+    /* background-color: rgb(95, 152, 202); */
+    font-family: "Grey Qo", cursive;
+    font-weight: bold;
+    font-size: 18px;
+    align-items: center;
+    /* height: 40px; */
+    padding: 15px;
+    margin-left: 70px;
+    margin-right: 10px;
 }
 
 .video-container {
-          /* background-color:#; */
-          height: 500px;
-          margin-bottom: 10px;
-          margin-left: 60px;
-          margin-right: 10px;
-          display: flex;
+    /* background-color:#; */
+    height: 500px;
+    margin-bottom: 10px;
+    margin-left: 60px;
+    margin-right: 10px;
+    display: flex;
 }
 
 .video-container video {
-          height: 500px;
-          /* width: auto; */
-          /* background-color: #fff; */
-          /* margin-left: 350px; */
-          flex: 8;
-          /* right: 0; */
+    height: 500px;
+    /* width: auto; */
+    /* background-color: #fff; */
+    /* margin-left: 350px; */
+    flex: 8;
+    /* right: 0; */
 }
 
 .video-episode-container {
-          background-color: #3f3f3f;
-          width: 350px;
-          height: 500px;
-          flex: 2;
-          border-radius: 15px;
+    background-color: #3f3f3f;
+    width: 350px;
+    height: 500px;
+    flex: 2;
+    border-radius: 15px;
 }
 
 /* 
@@ -205,139 +282,131 @@ body {
 } */
 
 .video-content-details {
-          /* background-color: rgb(94, 89, 85); */
-          height: 300px;
-          margin-left: 60px;
-          margin-right: 10px;
-          display: flex;
-          /* position: relative; */
+    /* background-color: rgb(94, 89, 85); */
+    height: 300px;
+    margin-left: 60px;
+    margin-right: 10px;
+    display: flex;
+    /* position: relative; */
 }
 
 .content-image {
-          flex: 1;
-          border-radius: 20px;
-          width: 100px;
-          height: 250px;
-          margin: 20px 30px 20px 5px;
+    flex: 1;
+    border-radius: 20px;
+    width: 100px;
+    height: 250px;
+    margin: 20px 30px 20px 5px;
 }
 
 .content-details {
-          flex: 5;
+    flex: 5;
 }
 
 .content-details h2 {
-          font-family: "Grey Qo", cursive;
-          font-weight: bold;
-          font-size: 30px;
-          margin-top: 25px;
+    font-family: "Grey Qo", cursive;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: 25px;
 }
 
 .content-details h5 {
-          font-family: "Grey Qo", cursive;
-          font-weight: bold;
-          margin-top: 5px;
-          /* color: burlywood; */
-          /* color: rgb(149, 242, 50); */
+    font-family: "Grey Qo", cursive;
+    font-weight: bold;
+    margin-top: 5px;
+    /* color: burlywood; */
+    /* color: rgb(149, 242, 50); */
 }
 
 .content-desc {
-          color: snow;
-          font-family: "Grey Qo", cursive;
-          /* font-family: "Hanuman", serif; */
-          font-weight: 100;
-          margin-top: 15px;
-          /* margin-bottom: 10px; */
-          /* padding-left: 10px; */
-          /* top: 60%; */
-          text-align: justify;
-          font-size: 15px;
-          width: 600px;
+    color: snow;
+    font-family: "Grey Qo", cursive;
+    /* font-family: "Hanuman", serif; */
+    font-weight: 100;
+    margin-top: 15px;
+    /* margin-bottom: 10px; */
+    /* padding-left: 10px; */
+    /* top: 60%; */
+    text-align: justify;
+    font-size: 15px;
+    width: 600px;
 }
 
 .movie-details {
-          align-items: center;
-          margin-top: 10px;
-          /* margin-bottom: 5px; */
-          /* padding-left: 10px; */
+    align-items: center;
+    margin-top: 10px;
+    /* margin-bottom: 5px; */
+    /* padding-left: 10px; */
 }
 
 .movie-details h5 {
-          color: rgb(149, 242, 50);
-          font-size: 13px;
-          font-weight: bold;
-          margin-right: 10px;
+    color: rgb(149, 242, 50);
+    font-size: 13px;
+    font-weight: bold;
+    margin-right: 10px;
 }
 
 .movie-details h3 {
-          margin-top: 5px;
-          color: #fff;
-          display: flex;
-          align-items: center;
-          font-size: 12px;
+    margin-top: 5px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
 }
 
 .movie-details h3 span {
-          background: yellow;
-          color: #000;
-          padding: 0px 3px;
-          /* margin: 0px 5px 0px 5px; */
-          font-weight: bolder;
-          cursor: pointer;
+    background: yellow;
+    color: #000;
+    padding: 0px 3px;
+    /* margin: 0px 5px 0px 5px; */
+    font-weight: bolder;
+    cursor: pointer;
 }
 
-<<<<<<< HEAD
-.movie-details h3 span a {
-          text-decoration: none;
-          color: black;
-}
-
-=======
->>>>>>> 0d473b4d6e6342a6ce45138181a0554836fb5edf
 .movie-details h3 i {
-          margin-right: 5px;
-          margin-left: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .content-castmembers {
-          background-color: #3f3f3f;
-          height: 20px;
-          margin-left: 50px;
-          margin-top: 20px;
-          font-family: "Grey Qo", cursive;
-          padding: 0px 0px 10px 15px;
-          font-size: 20px;
-          font-weight: bolder;
+    background-color: #3f3f3f;
+    height: 20px;
+    margin-left: 50px;
+    margin-top: 20px;
+    font-family: "Grey Qo", cursive;
+    padding: 0px 0px 10px 15px;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 .castmembers-director {
-          /* height: 120px; */
-          font-family: "Grey Qo", cursive;
-          display: flex;
+    /* height: 120px; */
+    font-family: "Grey Qo", cursive;
+    display: flex;
 }
 
 .castmembers-director span {
-          flex: 3;
+    flex: 3;
 }
 
 .castmembers-writers {
-          /* height: 400px; */
-          font-family: "Grey Qo", cursive;
-          display: flex;
+    /* height: 400px; */
+    font-family: "Grey Qo", cursive;
+    display: flex;
 }
 
 .castmembers-writers span {
-          flex: 3;
+    flex: 3;
 }
 
 .castmembers-cast {
-          /* height: 400px; */
-          font-family: "Grey Qo", cursive;
-          display: flex;
+    /* height: 400px; */
+    font-family: "Grey Qo", cursive;
+    display: flex;
 }
 
 .castmembers-cast span {
-          margin-bottom: 20px;
-          flex: 3;
+    margin-bottom: 20px;
+    flex: 3;
 }
 
 /* .castmembers {
@@ -347,163 +416,163 @@ body {
 } */
 
 .castmembers-details {
-          display: flex;
+    display: flex;
 }
 
 .castmembers-details img {
-          margin-left: 70px;
-          margin-top: 15px;
-          height: 100px;
-          width: 80px;
-          border-radius: 20px;
+    margin-left: 70px;
+    margin-top: 15px;
+    height: 100px;
+    width: 80px;
+    border-radius: 20px;
 }
 
 .castmembers-details span h4 {
-          font-size: 22px;
-          font-weight: bolder;
-          margin-top: 30px;
-          margin-left: 15px;
+    font-size: 22px;
+    font-weight: bolder;
+    margin-top: 30px;
+    margin-left: 15px;
 }
 
 .castmembers-details span h2 {
-          font-size: 15px;
-          color: chartreuse;
-          margin-top: 10px;
-          margin-left: 15px;
+    font-size: 15px;
+    color: chartreuse;
+    margin-top: 10px;
+    margin-left: 15px;
 }
 
 .endbar {
-          background-color: rgb(255, 255, 255);
-          height: 250px;
-          /* margin-top: 10px; */
-          margin-left: 50px;
-          background-image: url("/main/Images/bottom_background.jpg");
-          background-blend-mode: darken;
+    background-color: rgb(255, 255, 255);
+    height: 250px;
+    /* margin-top: 10px; */
+    margin-left: 50px;
+    background-image: url("/main/Images/bottom_background.jpg");
+    background-blend-mode: darken;
 }
 
 .endbar .endbar-socialmedia-icons {
-          display: flex;
-          border-bottom: 2px solid rgb(255, 255, 255);
-          width: 425px;
-          margin-left: 20px;
+    display: flex;
+    border-bottom: 2px solid rgb(255, 255, 255);
+    width: 425px;
+    margin-left: 20px;
 }
 
 .endbar .endbar-socialmedia-icons img {
-          height: 85px;
-          width: 220px;
-          margin-top: 10px;
-          /* margin-left:30px; */
-          /* border-right: 3px solid black; */
+    height: 85px;
+    width: 220px;
+    margin-top: 10px;
+    /* margin-left:30px; */
+    /* border-right: 3px solid black; */
 }
 
 .endbar .endbar-socialmedia-icons .border {
-          color: #f3d7a2;
-          margin-left: 10px;
-          margin-top: 30px;
-          margin-bottom: 15px;
-          padding-top: 8px;
-          padding-left: 10px;
-          font-size: 25px;
-          border-left: 2px solid rgb(255, 255, 255);
+    color: #f3d7a2;
+    margin-left: 10px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    padding-top: 8px;
+    padding-left: 10px;
+    font-size: 25px;
+    border-left: 2px solid rgb(255, 255, 255);
 }
 
 .endbar .endbar-socialmedia-icons abbr i {
-          color: #f3d7a2;
-          margin-left: 10px;
-          margin-top: 35px;
-          margin-bottom: 15px;
-          font-size: 30px;
-          font-weight: 500;
+    color: #f3d7a2;
+    margin-left: 10px;
+    margin-top: 35px;
+    margin-bottom: 15px;
+    font-size: 30px;
+    font-weight: 500;
 }
 
 .endbar-socialmedia-icons abbr i:hover,
 .endbar-socialmedia-icons .border:hover {
-          color: #0079ff;
-          cursor: pointer;
+    color: #0079ff;
+    cursor: pointer;
 }
 
 .endbar-copyright {
-          color: #f3d7a2;
+    color: #f3d7a2;
 }
 
 .endbar-copyright i {
-          font-size: 15px;
-          color: #f3d7a2;
-          margin-top: 130px;
-          margin-left: 20px;
-          margin-right: 5px;
+    font-size: 15px;
+    color: #f3d7a2;
+    margin-top: 130px;
+    margin-left: 20px;
+    margin-right: 5px;
 }
 
 .dropdown {
-          font-family: "Grey Qo", cursive;
-          font-weight: 500;
-          font-size: 18px;
-          background-color: #bdb6b6;
-          border-radius: 15px;
-          width: 100%;
-          height: 50px;
-          padding: 8px;
-          margin-bottom: 0px;
-          cursor: pointer;
+    font-family: "Grey Qo", cursive;
+    font-weight: 500;
+    font-size: 18px;
+    background-color: #bdb6b6;
+    border-radius: 15px;
+    width: 100%;
+    height: 50px;
+    padding: 8px;
+    margin-bottom: 0px;
+    cursor: pointer;
 }
 
 .episode-container {
-          height: 440px;
-          overflow-y: auto;
-          background-color: #3f3f3f;
-          /* background-color: #ffa600; */
-          border-radius: 15px;
-          padding-top: 5px;
-          padding-bottom: 5px;
-          padding-left: 5px;
-          font-family: "Grey Qo", cursive;
+    height: 440px;
+    overflow-y: auto;
+    background-color: #3f3f3f;
+    /* background-color: #ffa600; */
+    border-radius: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    font-family: "Grey Qo", cursive;
 }
 
 .episode-list {
-          list-style-type: none;
-          /* height: 20px; */
-          padding: 0;
-          margin: 0;
-          overflow-x: hidden;
-          font-size: 13px;
+    list-style-type: none;
+    /* height: 20px; */
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    font-size: 13px;
 }
 
 .episode-list li {
-          padding: 5px 0;
-          border-bottom: 1px solid #ccc;
-          overflow-x: hidden;
-          cursor: pointer;
+    padding: 5px 0;
+    border-bottom: 1px solid #ccc;
+    overflow-x: hidden;
+    cursor: pointer;
 }
 
 .episode-list li:hover {
-          color: #0079ff;
+    color: #0079ff;
 }
 
 .episode-list li:last-child {
-          border-bottom: none;
+    border-bottom: none;
 }
 
 .episode-container .episode-list li span {
-          /* background-color: #000000; */
-          color: #ffa600;
-          font-weight: bold;
-          border-radius: 3px;
-          /* padding: 3px 10px; */
+    /* background-color: #000000; */
+    color: #ffa600;
+    font-weight: bold;
+    border-radius: 3px;
+    /* padding: 3px 10px; */
 }
 
 .active_episode {
-          font-weight: bold;
-          color: #007bff;
-          /* Change color to your preference */
+    font-weight: bold;
+    color: #007bff;
+    /* Change color to your preference */
 }
 
 .output {
-          font-size: 18px;
-          font-family: "Grey Qo", cursive;
-          align-items: center;
-          width: 150px;
-          /* background-color: #0079ff; */
-          margin-left: 315px;
+    font-size: 18px;
+    font-family: "Grey Qo", cursive;
+    align-items: center;
+    width: 150px;
+    /* background-color: #0079ff; */
+    margin-left: 315px;
 }
 
 /* .video-text {
