--- a/registration/fs.css
+++ b/registration/fs.css
@@ -17,8 +17,8 @@ body {
 
 .box {
     position: relative;
-    width: 550px;
-    height: 950px;
+    width: 400px;
+    height: 650px;
     background: #1c1c1c;
     border-radius: 50px 5px;
     overflow: hidden;
@@ -30,8 +30,8 @@ body {
     position: absolute;
     top: -50%;
     left: -50%;
-    width: 500px;
-    height: 850px;
+    width: 350px;
+    height: 550px;
     background: linear-gradient(60deg, transparent, #45f3ff, #45f3ff);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -43,8 +43,8 @@ body {
     position: absolute;
     top: -50%;
     left: -50%;
-    width: 500px;
-    height: 850px;
+    width: 350px;
+    height: 550px;
     background: linear-gradient(60deg, transparent, #d9138a, #d913d9);
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
@@ -56,6 +56,7 @@ body {
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -67,7 +68,7 @@ form {
     border-radius: 50px 5px;
     background: rgba(40, 41, 45, 0.9);
     z-index: 10;
-    padding: 40px 50px;
+    padding: 20px 30px;
     display: flex;
     flex-direction: column;
     opacity: .8;
@@ -75,16 +76,16 @@ form {
 
 h2 {
     color: #45f3ff;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 500;
     text-align: center;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .inputBox {
     position: relative;
     width: 100%;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .inputBox input {
@@ -95,7 +96,7 @@ h2 {
     border: none;
     outline: none;
     color: #23242a;
-    font-size: 1.2em;
+    font-size: 20px;
     letter-spacing: 0.05em;
     z-index: 10;
 }
@@ -104,15 +105,15 @@ h2 {
     position: absolute;
     left: 0;
     padding: 25px 10px 10px;
-    font-size: 1.2em;
+    font-size: 20;
     color: #8f8f8f;
     pointer-events: none;
     letter-spacing: 0.05em;
     transition: 0.5s;
 }
 
-.inputBox input:valid ~ span,
-.inputBox input:focus ~ span {
+.inputBox input:valid~span,
+.inputBox input:focus~span {
     color: #45f3ff;
     transform: translateX(-10px) translateY(-30px);
     font-size: 0.75em;
@@ -131,8 +132,8 @@ h2 {
     z-index: 9;
 }
 
-.inputBox input:valid ~ i,
-.inputBox input:focus ~ i {
+.inputBox input:valid~i,
+.inputBox input:focus~i {
     height: 44px;
 }
 
@@ -172,25 +173,23 @@ input[type="submit"]:active {
     opacity: .8;
 }
 
-#myVideo 
-{
+#myVideo {
     width: 100vw;
-   height: 100vh;
-   object-fit: cover;
-   position: fixed;
-   left: 0;
-   right: 0;
-   top: 0;
-   bottom: 0;
-   z-index: -1;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
 }
-  
-  .content 
-  {
+
+.content {
     position: fixed;
     bottom: 0;
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
-  }
+}
